--- a/project_1.css
+++ b/project_1.css
@@ -3,14 +3,13 @@ body {
   background-color: #474f7a;
 }
 
-section {
+/* section {
   padding-top: 1rem;
   padding-bottom: 2rem;
-}
+} */
 
 #about_project {
   padding-top: 6rem;
-  padding-bottom: 2rem;
   background-color: #474f7a;
   color: #ffffff;
 }
